--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
-- Add local Noto Sans fonts
-- Add local Google Icons fonts
-- Migrating csv processing logic from python to php
-- build php/html page for csv upload
-- Adding variations table and control panel
-- Documentation and quick start guide
-- Adding authors credits
+⬜ Add local Noto Sans fonts
+⬜ Add local Google Icons fonts
+⬜ Migrating csv processing logic from python to php
+⬜ build php/html page for csv upload
+⬜ Adding variations table and control panel
+⬜ Documentation and quick start guide
+✅ Adding animation style option
+⬜ Adding authors credits
