moved font loading locally / increased wait time before first scroll and on reload / improved repo hierarchy

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
-⬜ Add local Noto Sans fonts
-⬜ Add local Google Icons fonts
+✅ Add local Noto Sans fonts
+✅ Add local Google Icons fonts
 ⬜ Migrating csv processing logic from python to php
 ⬜ build php/html page for csv upload
 ⬜ Adding variations table and control panel
