--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 ✅ Add local Noto Sans fonts
 ✅ Add local Google Icons fonts
-⬜ Migrating csv processing logic from python to php
-⬜ build php/html page for csv upload
+✅ Migrating csv processing logic from python to php
+✅ build php/html page for csv upload
 ⬜ Adding variations table and control panel
 ⬜ Documentation and quick start guide
 ✅ Adding animation style option
